--- a/DnD-Character-Generator-main/server/package.json
+++ b/DnD-Character-Generator-main/server/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.11.3",
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "4.0",
     "mongoose": "^8.13.1"
   },
   "description": ""
